fix nav bar spacing and add body margin

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    margin: 3vw;
 }
 nav ul {
     width: 100%;
@@ -27,8 +28,8 @@ nav a {
     list-style: none;
     color: black;
     text-decoration: none;
-    padding: 15vw;
-    font-size: 2vw;
+    padding: 12vw;
+    font-size: 3vw;
     font-family: URW Chancery L, cursive;
 }
 nav a:hover{
